--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,20 +47,32 @@ jobs:
           pip install -r requirements.txt
           playwright install  # if you use Playwright for e2e tests
       
-      - name: Run tests
+      - name: Run tests with merged coverage
         env:
           DATABASE_URL: postgresql://user:password@localhost:5432/mytestdb
         run: |
           source venv/bin/activate
           
           # 1) Unit tests
-          pytest tests/unit/ --cov=src --junitxml=test-results/junit.xml
+          pytest tests/unit/ --cov=app --cov-report=xml --cov-append
           
           # 2) Integration tests
-          pytest tests/integration/
+          pytest tests/integration/ --cov=app --cov-report=xml --cov-append
           
           # 3) E2E or other tests
-          pytest tests/e2e/
+          pytest tests/e2e/ --cov=app --cov-report=xml --cov-append
+
+          # Merge coverage files and generate reports
+          coverage combine
+          coverage report
+          coverage html
+          coverage xml
+
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: htmlcov
 
   security:
     needs: test
@@ -99,8 +111,8 @@ jobs:
         with:
           push: true
           tags: |
-            kaw393939/601_module9:latest
-            kaw393939/601_module9:${{ github.sha }}
+            danatryon/assignment14:latest
+            danatryon/assignment14:${{ github.sha }}
           platforms: linux/amd64,linux/arm64
-          cache-from: type=registry,ref=kaw393939/601_module9:cache
+          cache-from: type=registry,ref=danatryon/assignment13:cache
           cache-to: type=inline,mode=max
