--- a/pytest.ini
+++ b/pytest.ini
@@ -15,11 +15,16 @@ python_classes = Test*
 # Automatically discover test functions that match 'test_*'
 python_functions = test_*
 
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
+
 # Option to add markers for different test categories, like 'slow' or 'fast'
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     fast: marks tests as fast (deselect with '-m "not fast"')
     e2e: marks tests as end-to-end (use with '-m "e2e"')
+    asyncio: mark a test as async using pytest-asyncio
+    playwright: marks tests that use Playwright
 
 # Suppress warnings during testing
 filterwarnings =
