echo message for postgresql://user:password@localhost:5432/mytestdb

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,11 @@ jobs:
           source venv/bin/activate
           pytest tests/unit/ --cov=app --cov-report=xml --cov-append
 
+      - name: Debug DATABASE_URL
+        run: echo $DATABASE_URL
+        env:
+          DATABASE_URL: postgresql://user:password@localhost:5432/mytestdb
+        
       - name: Apply migrations 
         env:
           DATABASE_URL: postgresql://user:password@localhost:5432/mytestdb
