--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -123,7 +123,7 @@ jobs:
       - name: Merge coverage reports
         run: |
           source venv/bin/activate
-          coverage combine
+          coverage combine || true
           coverage report
           coverage html
           coverage xml
