--- a/pytest.ini
+++ b/pytest.ini
@@ -15,8 +15,7 @@ python_classes = Test*
 # Automatically discover test functions that match 'test_*'
 python_functions = test_*
 
-asyncio_mode = auto
-asyncio_default_fixture_loop_scope = function
+asyncio_mode = strict
 
 # Option to add markers for different test categories, like 'slow' or 'fast'
 markers =
